terraform/modules/kubernetes-system-longhorn/kubernetes/longhorn/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.zelos.k8s.infra.erpf.de`) # Hostname to match
      kind: Rule
      services: # Service to redirect requests to
        - name: longhorn-frontend
          port: 80
      # middlewares:
      #   - name: longhorn-basic-auth
  tls:
    secretName: longhorn-erpf-de-tls
